{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 422,
  "lineage": "68bca255-d929-eb38-d2b9-d7fe3e3940ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:374104755586:instance/i-05b01fb23829e3a0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b01fb23829e3a0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a29d470a5222b785",
            "private_dns": "ip-10-0-1-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-54-166-138-83.compute-1.amazonaws.com",
            "public_ip": "54.166.138.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00aa97724aaef3250",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-061bc1f68e92fa9f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00df056d9b25fa82e",
            "tags": {
              "Name": "terra_project-0",
              "Os": "ubuntu"
            },
            "tags_all": {
              "Name": "terra_project-0",
              "Os": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-061bc1f68e92fa9f5"
            ]
          },
          "dependencies": [
            "aws_security_group.terra_sec",
            "aws_subnet.terra-subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:374104755586:instance/i-0054a08b4042ff5b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0054a08b4042ff5b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0276633af617c3bb6",
            "private_dns": "ip-10-0-2-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.75",
            "public_dns": "ec2-54-157-26-34.compute-1.amazonaws.com",
            "public_ip": "54.157.26.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0411fde225cea169f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-061bc1f68e92fa9f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0124a5d2ecb8a32dc",
            "tags": {
              "Name": "terra_project-1",
              "Os": "ubuntu"
            },
            "tags_all": {
              "Name": "terra_project-1",
              "Os": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-061bc1f68e92fa9f5"
            ]
          },
          "dependencies": [
            "aws_security_group.terra_sec",
            "aws_subnet.terra-subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:374104755586:instance/i-00ff30a668d67c0b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ff30a668d67c0b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02866f524be3fd76e",
            "private_dns": "ip-10-0-3-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.15",
            "public_dns": "ec2-34-232-105-161.compute-1.amazonaws.com",
            "public_ip": "34.232.105.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ea901f91e2537d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-061bc1f68e92fa9f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0964a0e4b4c91b0fe",
            "tags": {
              "Name": "terra_project-2",
              "Os": "ubuntu"
            },
            "tags_all": {
              "Name": "terra_project-2",
              "Os": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-061bc1f68e92fa9f5"
            ]
          },
          "dependencies": [
            "aws_security_group.terra_sec",
            "aws_subnet.terra-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:internet-gateway/igw-0d0104c80a57d5f44",
            "id": "igw-0d0104c80a57d5f44",
            "owner_id": "374104755586",
            "tags": {
              "Name": "terra-igw"
            },
            "tags_all": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-04b7d3e41b7e4548c"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terra_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:loadbalancer/app/terra-lb/7624f8568013b672",
            "arn_suffix": "app/terra-lb/7624f8568013b672",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-lb-598080272.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:loadbalancer/app/terra-lb/7624f8568013b672",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terra-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-061bc1f68e92fa9f5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00df056d9b25fa82e"
              },
              {
                "subnet_id": "subnet-0124a5d2ecb8a32dc"
              },
              {
                "subnet_id": "subnet-0964a0e4b4c91b0fe"
              }
            ],
            "subnets": [
              "subnet-00df056d9b25fa82e",
              "subnet-0124a5d2ecb8a32dc",
              "subnet-0964a0e4b4c91b0fe"
            ],
            "tags": {
              "Environment": "terra_target"
            },
            "tags_all": {
              "Environment": "terra_target"
            },
            "vpc_id": "vpc-04b7d3e41b7e4548c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terra_sec",
            "aws_subnet.terra-subnet",
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terra_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:listener/app/terra-lb/7624f8568013b672/52ed09add5e6461c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:listener/app/terra-lb/7624f8568013b672/52ed09add5e6461c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:loadbalancer/app/terra-lb/7624f8568013b672",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terra_lb",
            "aws_lb_target_group.terra_target",
            "aws_security_group.terra_sec",
            "aws_subnet.terra-subnet",
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terra_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd",
            "arn_suffix": "targetgroup/terra-app/2f0897c97a036bdd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terra-app",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04b7d3e41b7e4548c"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terra_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd-20230205151430082900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd",
            "target_id": "i-05b01fb23829e3a0f"
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_lb_target_group.terra_target",
            "aws_security_group.terra_sec",
            "aws_subnet.terra-subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd-20230205151430134300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd",
            "target_id": "i-0054a08b4042ff5b9"
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_lb_target_group.terra_target",
            "aws_security_group.terra_sec",
            "aws_subnet.terra-subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd-20230205151430182000000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374104755586:targetgroup/terra-app/2f0897c97a036bdd",
            "target_id": "i-00ff30a668d67c0b9"
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_lb_target_group.terra_target",
            "aws_security_group.terra_sec",
            "aws_subnet.terra-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:route-table/rtb-002787a2c22547761",
            "id": "rtb-002787a2c22547761",
            "owner_id": "374104755586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0104c80a57d5f44",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-rt"
            },
            "tags_all": {
              "Name": "terra-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b7d3e41b7e4548c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcd60aa00b61cdaa",
            "route_table_id": "rtb-002787a2c22547761",
            "subnet_id": "subnet-00df056d9b25fa82e"
          },
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.terra-rt",
            "aws_subnet.terra-subnet",
            "aws_vpc.terra-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d939659432cabb03",
            "route_table_id": "rtb-002787a2c22547761",
            "subnet_id": "subnet-0124a5d2ecb8a32dc"
          },
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.terra-rt",
            "aws_subnet.terra-subnet",
            "aws_vpc.terra-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cf3a63c060ae46a",
            "route_table_id": "rtb-002787a2c22547761",
            "subnet_id": "subnet-0964a0e4b4c91b0fe"
          },
          "dependencies": [
            "aws_route_table.terra-rt",
            "aws_subnet.terra-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:security-group/sg-061bc1f68e92fa9f5",
            "description": "Allow HTTP and SSH traffic via Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061bc1f68e92fa9f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra_sec_group",
            "name_prefix": "",
            "owner_id": "374104755586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b7d3e41b7e4548c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:subnet/subnet-00df056d9b25fa82e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00df056d9b25fa82e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374104755586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-subnet-0"
            },
            "tags_all": {
              "Name": "terra-subnet-0"
            },
            "vpc_id": "vpc-04b7d3e41b7e4548c"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:subnet/subnet-0124a5d2ecb8a32dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0124a5d2ecb8a32dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374104755586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-subnet-1"
            },
            "tags_all": {
              "Name": "terra-subnet-1"
            },
            "vpc_id": "vpc-04b7d3e41b7e4548c"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:subnet/subnet-0964a0e4b4c91b0fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0964a0e4b4c91b0fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374104755586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-subnet-2"
            },
            "tags_all": {
              "Name": "terra-subnet-2"
            },
            "vpc_id": "vpc-04b7d3e41b7e4548c"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:vpc/vpc-04b7d3e41b7e4548c",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092de004bd94f7753",
            "default_route_table_id": "rtb-0d218d10b7be314b2",
            "default_security_group_id": "sg-0594923e5b203f67d",
            "dhcp_options_id": "dopt-05911729ad891de7d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b7d3e41b7e4548c",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0cf6101a89961b85b",
            "ipv6_cidr_block": "2600:1f10:44d8:3500::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d218d10b7be314b2",
            "owner_id": "374104755586",
            "tags": {
              "Name": "terra-vpc"
            },
            "tags_all": {
              "Name": "terra-vpc"
            }
          }
        }
      ]
    }
  ]
}